# CompanionVault

./: .gitignore  CONTENT_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.bootstrap/: part00  part01  part01a  part01b  part02  part03
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: persona-request.yml
.github/workflows/: ci.yml  pages.yml  release-bundle.yml  release.yml  tag-milestones.yml
baselines/: healthy-companion.yaml  natural-conversation.yaml  relationship-boundaries.yaml
docs/: privacy-and-consent.md  publishing.md  releases.md
docs/releases/: v1.0.0.md
personas/zh-CN/longtime-friend/: README.md  examples.yaml  persona.yaml
personas/zh-CN/warm-listener/: README.md  examples.yaml  persona.yaml
personas/zh-CN/xiaoyou/: README.md  examples.yaml  persona.yaml  tests.yaml
schemas/: persona.schema.json  project.schema.json
scripts/: install-skill.ps1  install-skill.sh  package_binary.py  verify_binary.py
site/: app.js  index.html  styles.css
skills/persona-builder/: SKILL.md
skills/persona-builder/references/: output-contract.md  prompt-contract.md
skills/persona-distiller/: SKILL.md
skills/persona-distiller/prompts/: review-checklist.md
skills/persona-distiller/references/: memory-contract.md  output-contract.md
skills/persona-distiller/tools/: normalize_chat.py
src/companion_vault/: catalog.py  cli.py  compiler.py  core.py  distill.py  installer.py  privacy.py  release.py  site.py  skill_install.py  state.py
src/companion_vault/data/persona-distiller/: SKILL.md
src/companion_vault/data/persona-distiller/prompts/: evidence-guide.md
src/companion_vault/data/persona-distiller/tools/: normalize_chat.py
src/persona_dock/: __init__.py  __main__.py  cli.py  compiler.py  distill.py  installer.py  io.py  packaging.py  project.py  skill_install.py
src/persona_dock/data/: project.schema.json
src/persona_dock/data/persona-builder/references/: evidence-contract.md  memory-contract.md  output-contract.md
src/persona_dock/data/persona-distiller/: SKILL.md
src/persona_dock/data/persona-distiller/references/: memory-contract.md  output-contract.md
tests/: test_core.py  test_distill.py  test_lifecycle.py  test_site.py  test_skill_install.py
tests_v2/: test_cli.py  test_skill_install.py  test_workflow.py
