[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "companion-vault"
version = "0.1.0"
description = "An open, installable registry of emotional companion personas for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cuteyuchen" }]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.20",
]

[project.scripts]
companion-vault = "companion_vault.cli:main"
cvault = "companion_vault.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
