[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-dock"
version = "0.2.0"
description = "Local-first toolkit for creating, packaging, and installing portable AI personas."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cuteyuchen" }]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
personadock = "persona_dock.cli:main"
pdock = "persona_dock.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["persona_dock*"]

[tool.setuptools.package-data]
persona_dock = [
  "data/*.json",
  "data/persona-distiller/SKILL.md",
  "data/persona-distiller/references/*.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests_v2"]
